23-kubernetes/00-webhooks/scratch/01-simple-mutating-webhook/manifests/pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-1
  namespace: default
  labels:
    app: nginx-1
spec:
  containers:
    - name: nginx
      image: nginx
