23-kubernetes/00-webhooks/scratch/01-simple-mutating-webhook/manifests/local_test.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: my-service-1
  labels:
    kubernetes.io/service-name: mutating-webhook
addressType: IPv4
ports:
  - name: ''
    appProtocol: http
    protocol: TCP
    port: 8080
endpoints:
  - addresses:
      - "192.168.43.246"
---
apiVersion: v1
kind: Service
metadata:
  name: mutating-webhook
spec:
  ports:
    - protocol: TCP
      port: 443
      targetPort: 8080
