23-kubernetes/00-webhooks/scratch/01-simple-mutating-webhook/manifests/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
 name: "simple-mutating-webhook.avabodha.in"
webhooks:
 - name: "simple-mutating-webhook.avabodha.in"
   sideEffects: None
   admissionReviewVersions: ["v1"]
   namespaceSelector: {}
   rules:
     - apiGroups: [""]
       apiVersions: ["v1"]
       operations: ["CREATE"]
       resources: ["pods"]
       scope: "*"
   clientConfig:
     service:
       namespace: default
       name: mutating-webhook
       path: /mutate-pods
       port: 443
     caBundle:
      # `caBundle` is a PEM encoded CA bundle which will be used to validate the
      # webhook's server certificate. If unspecified, system trust roots on the
      # apiserver are used.
      |
      LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tDQpNSUlFTkRDQ0F4eWdBd0lCQWdJVWZhTjBiU1Vo
[...]
      LQ0K
